# dbx-anti-pattern-detector

./: README.md  pyproject.toml
demo/: sample_queries.py  setup_demo_environment.py
src/cloud_ceo/: .gitignore  __init__.py  core.py  cost_calculator.py  models.py
src/cloud_ceo/config/: __init__.py  loader.py  schema.py
src/cloud_ceo/databricks/: __init__.py  discovery.py  fetch.py  spark_utils.py  sql_parser.py  workspace.py
src/cloud_ceo/detectors/: __init__.py
src/cloud_ceo/detectors/spark/: __init__.py  cartesian_join.py  correlated_subquery.py  distinct_on_unique.py  group_by_cardinality.py  implicit_type_conversion.py  inefficient_merge.py  like_without_wildcards.py  missing_partition_filter.py  multiple_count_distinct.py  non_sargable_predicate.py  not_in_with_nulls.py  or_to_in.py  select_star.py  union_without_all.py  window_without_partition.py
src/cloud_ceo/guidelines/: README.md  __init__.py  markdown_loader.py
src/cloud_ceo/llm/: __init__.py  context.py  context_formatter.py  context_validator.py  industry_prompts.py  orchestrator.py  prompts.py  rate_limiter.py  schemas.py  state.py  workflow.py
src/cloud_ceo/rule_engine/: __init__.py  base_detector.py  detector.py  exceptions.py  loader.py  plugin_loader.py  precedence.py  schema.py  shared.py  types.py
src/cloud_ceo/rules/built_in/: schema.json  spark_sql_universal.yaml
src/cloud_ceo/security/: __init__.py  audit_logger.py  detector_analyzer.py  injection_audit_logger.py  prompt_sanitizer.py
src/cloud_ceo/utils/: __init__.py  sql_utils.py
